apps/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service': 'frontend'
        'consul.hashicorp.com/connect-service-upstreams': 'bff:4000'
    spec:
      containers:
      - name: application
        image: oyas/web-app-frontend
        ports:
        - containerPort: 8000
