apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8000
